* QuickPay: Handle issue where no operations exists on payment [ta]
* NMI: Support merchant_defined_fields [duff]
* QuickpayV10: Add verify [anellis]
* BraintreeBlue: Use wiredump_device for logging only if present [braintreeps]
* QuickpayV10: Add scrubbing [anellis]
* QuickPayV10: Change tests to point to proper gateway [anellis]
* Monei: Add default options argument [davidgf]


== Version 1.52.0 (July 20, 2015)

* Authorize.Net: Add device type to authorize.net retail requests [abecevello]
* Vanco: Change transaction type to WEB for echecks [duff]
* PayPal: Allow soft descriptor to be specified [davidsantoso]
* Authorize.net: Add disable_partial_auth field [anellis]
* SagePay: Add apply_avscv2 field [anellis]
* S5: Add Store [anellis]
* Merchant Ware v4: Add support for verify [davidsantoso]
* Mercury: No longer default to allow partial auth [duff]
* PayPal: Fix soft_descriptor and support soft_descriptor_city [duff]
* Merchant Ware: Add scrubbing [davidsantoso]
* Stripe: Make purchase via vaulted card consistent [duff]
* Moneris: Add network tokenization support [andrewpaliga]
* Ogone: Allow specifying a timeout value for requests [tomhipkin]
* PayU India: Increase allowed txnid to 30 characters [ntalbott]
* Authorize.Net: Allow passing device type through options, make wireless POS the default [abecevello]
* Authorize.Net: Update to new Akamai URL [taf2]
* Braintree: Add hold_in_escrow [anellis]
* Stripe: Allow purchases with tokens without customer specification [bizla]

== Version 1.51.0 (July 2, 2015)

* Garanti: Illegal character '&' parsing response [masaruhoshi]
* Stripe: Revert force USD for verify [duff]
* Litle: Surface XML validation errors in the response [jasonbosco]
* Litle: Pass the credit card verification value for tokenization (#store) requests, if one is set. [jasonbosco]
* S5: Make scrubbing regex less greedy [duff]
* CardStream: Add support for verify [anellis]
* Authorize.net: UTF-8 encode requests [duff]