@@ -44,6 +44,7 @@
 * QuickpayV10: Add scrubbing [anellis]
 * QuickPayV10: Change tests to point to proper gateway [anellis]
 * Monei: Add default options argument [davidgf]
+* ActiveMerchant: Remove ActiveMerchant::Billing::Base.integration_mode [aprofeit]
 
 
 == Version 1.52.0 (July 20, 2015)
